Landing page edits, added favicon

--- a/views/index.html
+++ b/views/index.html
@@ -1,4 +1,4 @@
-
+<link rel="shortcut icon" href="images/favicon.png">
 <!-- Modal -->
 <div class="modal fade" id="new-account-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
