--- a/views/iphone-white.html
+++ b/views/iphone-white.html
@@ -27,7 +27,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel='shortcut icon' href='images/logo/logo.png'>
+    <link rel='shortcut icon' href='images/favicon.png'>
 
 </head> 
 
@@ -73,22 +73,27 @@
                     <h2 class="title">At our roots we specialize in starting businesses, brands, apps, and the strategic marketing behind them.</h2>
 
                     <ul class='summary' style='margin-left: -30px; padding-right: 40px; margin-bottom: 30px; font-size: 16px;'>
-                        <p>We also have a knack for automating monotonous tasks. A few of our lagrest automated services we currently offer are trading favorites on large twitter accounts, scheduling posts on twitter, instagram, & Facebook, and strategic mass following/liking on twitter.</p>
+                        <p>We also have a knack for automating monotonous tasks. A few of our automated services we currently offer are trading favorites on large twitter accounts, scheduling posts on twitter, instagram, & Facebook, and strategic mass following/liking on twitter.</p>
                     </ul>
 
-                    <ul class="summary">
+                    <div class='row'>
+                    <ul class="summary col-xs-6">
                         <li>Impressions by the millions</li>
                         <li>Marketing Campaigns</li>
-                        <li>D20NS (Fav Trading)</li>
+                        <li>Automatic Favorite Trading</li>
+                    </ul>
+
+                    <ul class="summary col-xs-6">
                         <li>Social media post scheduling</li>
                         <li>Business Consulting</li>
                         <li>Build-a-Brand</li>
                     </ul>
+                    </div>
 
                     <div class="download-area col-sm-12 col-xs-12">
                         <ul class="list-inline">
-                            <li class="btn btn-lg btn-default nav-item" style='margin-left: 50px; width: 150px;'><a class="scrollto" href="#features">Learn More</a></li>
-                            <li class="btn btn-lg btn-default" style='margin-left: 50px; width: 150px;'><a href="/signup">Sign Up Now</a></li>
+                            <li class="btn btn-lg btn-default nav-item" style='width: 150px;'><a class="scrollto" href="#features">Learn More</a></li>
+                            <li class="btn btn-lg btn-default" style='margin-left: 30px; width: 150px;'><a href="/signup">Sign Up Now</a></li>
                         </ul>
                         
                     </div>
@@ -219,8 +224,14 @@
                 </div><!--//faq-col-->
                 <div class="faq-col col-md-6 col-sm-6 col-xs-12">
                     <div class="item">
+                        <h3 class="question"><i class="fa fa-question-circle"></i>Can I get a refund?</h3>
+                        <p class="answer">If it is your first time using one of our monthly services we will offer a full refund as long as it's been under 7 days. After the first week we will no longer process refunds. If you do for some reason decide you'd like a refund you will be permanently blacklisted.</p>
+                    </div><!--//item-->
+                </div><!--//faq-col-->
+                <div class="faq-col col-md-6 col-sm-6 col-xs-12">
+                    <div class="item">
                         <h3 class="question"><i class="fa fa-question-circle"></i>Are my social media accounts at risk of being stolen or banned?</h3>
-                        <p class="answer">All of our programs are always carefully built within the guidelines of the platform it's being used on. Your accounts security is our number one priority. Your accounts passwords are encrypted and will never be saved on our end, it is simply to log in and then forgot about.</p>
+                        <p class="answer">All of our programs are always carefully built within the guidelines of the platform it's being used on. Your accounts security is our number one priority. Your accounts will never be saved on our end, it is simply to log in and then forgot about.</p>
                     </div><!--//item-->
                     <div class="item">
                         <h3 class="question"><i class="fa fa-question-circle"></i>What does your build a brand service offer? </h3>
@@ -242,7 +253,7 @@
                 <div class="content col-md-6 col-sm-6 col-xs-12 text-center">
                     <h2 class="title">Story behind Phenomenal</h2>
                     <p>Phenomenal is much more than just a Marketing & Tech company. It is a standard that we expect to meet with 100% of the work we produce. It is about raising the bar so you no longer have to settle.</p>
-                    <p> Our goal is to help start the next wave of successful businesses while creating tools for them to use that helps ensure their time is being spent as efficiently as possible.</p>
+                    <p> Our goal is to help start the next wave of successful businesses while creating tools for them to use that help ensure their time is being spent as efficiently as possible.</p>
                 </div><!--//content-->
                 <div class="team col-md-5 col-sm-5 col-md-offset-1 col-sm-offset-1 col-xs-12">
                     <div class="row">
