--- a/views/land.jade
+++ b/views/land.jade
@@ -7,7 +7,7 @@ html
 		meta(name='description', content='')
 		meta(name='author', content='')
 		title Phenomenal
-		link(rel='shortcut icon', href='images/logo/logo-7.png')
+		link(rel='shortcut icon', href='images/favicon.png')
 
 	body
 		
