--- a/views/parts/navbar.jade
+++ b/views/parts/navbar.jade
@@ -15,8 +15,8 @@ nav.navbar.navbar-static-top.header-navbar
         a.navbar-brand(href="/me")
             .logo.text-nowrap
                 .logo__img
-                    i.fa.fa-chevron-right
-                span.logo__text Right
+                    img(src="images/favicon.png" width="20" height="20")
+                span.logo__text Phenomenal
 
     .topnavbar
         ul.nav.navbar-nav.navbar-left
