--- a/views/signin.html
+++ b/views/signin.html
@@ -7,6 +7,8 @@
 
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,700">
 
+    <link rel='shortcut icon' href='images/favicon.png'>
+
     <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
