--- a/views/user-index.jade
+++ b/views/user-index.jade
@@ -197,6 +197,7 @@ block main
 block css
     link(href='libs/morris.js/morris.css', rel='stylesheet')
     link(href='libs/bootstrap-select/dist/css/bootstrap-select.min.css', rel='stylesheet')
+    link(rel='shortcut icon', href='images/favicon.png')
 block js
     script(src='libs/raphael/raphael-min.js')
     script(src='libs/morris.js/morris.min.js')
