Finished manual account trading

--- a/views/index.jade
+++ b/views/index.jade
@@ -169,6 +169,8 @@ html
                   a(href='#') Manage Accounts
                 li
                   a(href='#' data-toggle="modal" data-target="#new-account-modal") New Account
+                li
+                  a(href='#' data-toggle="modal" data-target="#new-manual-account-modal") New Manual Account
             li
               a(href='forms')
                 i.fa.fa-fw.fa-edit
