Added manual account count

--- a/views/index.jade
+++ b/views/index.jade
@@ -258,7 +258,7 @@ html
                     .col-xs-3
                       i.fa.fa-users.fa-5x
                     .col-xs-9.text-right
-                      .huge.js-total-manual-accounts
+                      .huge.js-total-manual-accounts #{manualAccountCount.count}
                       div Manual Accounts!
                 a(href='#').js-disabled-accounts
                   div(data-toggle="tooltip" data-placement="bottom" title="Feature Disabled!").panel-footer
