--- a/views/index.jade
+++ b/views/index.jade
@@ -272,10 +272,22 @@ html
               .panel.panel-default
                 .panel-heading
                   h3.panel-title
-                    i.fa.fa-bar-chart-o.fa-fw
-                    |  Account Volume
+                    i.fa.fa-database.fa-fw
+                    |  Current Que
                 .panel-body
-                  #morris-area-chart
+                  .table-responsive
+                    table.table.table-bordered.table-hover.table-striped
+                      thead
+                        tr
+                          th Username
+                          th Queued
+                          th Trades Completed
+                      tbody
+                      h1 #{que.username}
+                        tr
+                          td
+                          td user.children
+                          td ?
           // /.row
           .row
             .col-lg-4
