Que on dashboard

--- a/views/index.jade
+++ b/views/index.jade
@@ -283,10 +283,13 @@ html
                           th Queued
                           th Trades Completed
                       tbody
-                      h1 #{qu}
                         tr
-                          td
-                          td user.children
+                          td #{main}
+                          td #{que}
+                          td ?
+                        tr
+                          td #{main2}
+                          td #{que2}
                           td ?
           // /.row
           .row
