added que for accounts

--- a/views/index.jade
+++ b/views/index.jade
@@ -470,6 +470,10 @@ html
           label Account
           .js-new-que-account-input
 
+          h3 Current Que
+          hr
+          .js-current-que
+
       .modal-footer
         button.btn.btn-default(type='button', data-dismiss='modal') Close
         button.btn.btn-primary.js-add-sender(type='button', data-dismiss='modal') Submit
