--- a/views/index.jade
+++ b/views/index.jade
@@ -181,7 +181,7 @@ html
               h1.page-header
                 | Dashboard 
                 small Statistics Overview
-                .col-lg-2.pull-right
+                // .col-lg-2.pull-right
                   if running
                     input(id='auto-switch' type="checkbox" name="my-checkbox" data-on-text='ONLINE' data-off-text='OFFLINE' checked data-label-text='Auto')
                   else
