Added manual add and remove from lmkwd and history

--- a/views/index.jade
+++ b/views/index.jade
@@ -470,6 +470,24 @@ html
           h3 Current Que
           hr
           .js-current-que
+          h3 Current Lmkwd
+          hr
+          .js-current-lmkwd
+          h3 Current History
+          hr
+          .js-current-history
+          br
+          hr
+          label Add User To Lmkwd
+          input.js-new-lmkwd.form-control
+          br
+          button.btn.btn-primary.js-new-lmkwd-button Add Lmkwd
+          br
+          br
+          label Add User To History
+          input.js-new-history.form-control
+          br
+          button.btn.btn-primary.js-new-history-button Add History
 
       .modal-footer
         button.btn.btn-default(type='button', data-dismiss='modal') Close
