Added sent on dash and changed night time

--- a/views/index.jade
+++ b/views/index.jade
@@ -478,6 +478,7 @@ html
           h3 Current History
           hr
           .js-current-history
+          .js-current-sent
           br
           hr
           label Add User To Lmkwd
