added manual rts button and new filters for d20

--- a/views/index.jade
+++ b/views/index.jade
@@ -195,6 +195,7 @@ html
                 li.active
                   i.fa.fa-dashboard
                   |  dashboard
+                  button.btn.btn-danger.btn-sm.js-send-rts(style='right: 15; position: absolute; margin-top: -5px;') SEND RTS
           // /.row
           .row
             .col-lg-3.col-md-6
