Added manual lmkwd button

--- a/views/index.jade
+++ b/views/index.jade
@@ -196,6 +196,7 @@ html
                   i.fa.fa-dashboard
                   |  dashboard
                   button.btn.btn-danger.btn-sm.js-send-rts(style='right: 15; position: absolute; margin-top: -5px;') SEND RTS
+                  button.btn.btn-success.btn-sm.js-send-lmkwd(style='right: 100; position: absolute; margin-top: -5px;') SEND LMKWD
           // /.row
           .row
             .col-lg-3.col-md-6
