--- a/views/twitter-callback.html
+++ b/views/twitter-callback.html
@@ -2,11 +2,11 @@
 
 <html>
     <head>
-        <script src=&quot;https://code.jquery.com/jquery-2.1.4.min.js&quot;></script>
+        <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
         <script>
             $(function() {
-                $.get(&quot;<some domain>/access-token&quot; + location.search).done(function(user) {
-                    // Do something with your signed in user&#39;s information here.
+                $.get('http://localhost:3000/access-token' + location.search).done(function(user) {
+                    console.log(location.search);
                 });
             });
         </script>
