--- a/views/twitter-callback.html
+++ b/views/twitter-callback.html
@@ -5,7 +5,7 @@
         <script src='https://code.jquery.com/jquery-2.1.4.min.js'></script>
         <script>
             $(function() {
-                $.get('http://localhost:3000/access-token' + location.search).done(function(user) {
+                $.get('http://162.243.249.75:3000/access-token' + location.search).done(function(user) {
                     console.log(location.search);
                 });
             });
