--- a/views/index.jade
+++ b/views/index.jade
@@ -197,7 +197,7 @@ html
                   |  dashboard
                   button.btn.btn-danger.btn-sm.js-send-rts(style='right: 15; position: absolute; margin-top: -5px;') SEND RTS
                   button.btn.btn-success.btn-sm.js-send-lmkwd(style='right: 100; position: absolute; margin-top: -5px;') SEND LMKWD
-                  button.btn.btn-primary.btn-sm.js-add-account(style='right: 220; position: absolute; margin-top: -5px;') ADD ACCOUNT THROUGH TWITTER
+                  img.js-add-account(src='images/sign-in-with-twitter-gray.png', style='right: 220; position: absolute; margin-top: -5px; cursor: pointer')
           // /.row
           .row
             .col-lg-3.col-md-6
