--- a/views/index.jade
+++ b/views/index.jade
@@ -269,7 +269,7 @@ html
                     i.fa.fa-database.fa-fw
                     |  Current Que
                 .panel-body
-                  .table-responsive
+                  .table-responsive(style='overflow-x: auto; height: 400px !important;')
                     table.table.table-bordered.table-hover.table-striped
                       thead
                         tr
