Remove accounts from dash

--- a/views/index.jade
+++ b/views/index.jade
@@ -501,6 +501,8 @@ html
           br
           label Account
           .js-new-que-account-input
+          br
+          b.js-delete-account(style='color: darkred') DELETE ACCOUNT
 
           h3 Current Que
           hr
