--- a/views/index.jade
+++ b/views/index.jade
@@ -502,7 +502,8 @@ html
           label Account
           .js-new-que-account-input
           br
-          b.js-delete-account(style='color: darkred') DELETE ACCOUNT
+          b.js-delete-account(style='color: darkred; font-size: 20px') DELETE ACCOUNT
+          br
 
           h3 Current Que
           hr
