--- a/views/index.jade
+++ b/views/index.jade
@@ -269,7 +269,7 @@ html
                     i.fa.fa-database.fa-fw
                     |  Current Que
                 .panel-body
-                  .table-responsive(style='overflow-x: auto; height: 400px !important;')
+                  .table-responsive(style='overflow-x: auto; height: 600px !important;')
                     table.table.table-bordered.table-hover.table-striped
                       thead
                         tr
@@ -280,40 +280,18 @@ html
                         tr
                           if val.status
                             td.js-manual-que-add(data-username=val.username, data-dad_id=val.id, style='background-color:lightgreen')= val.username
+                              if val.active
+                                b.pull-right Online
+                              else
+                                b.pull-right(style='color: darkred') Offline
                           else
                             td.js-manual-que-add(data-username=val.username, data-dad_id=val.id, style='background-color:pink')= val.username
+                              if val.active
+                                b.pull-right Online
+                              else
+                                b.pull-right(style='color: darkred') Offline
                           td= val.total_trades
 
-          // /.row
-          .row
-            .col-lg-12
-              .panel.panel-default
-                .panel-heading
-                  h3.panel-title
-                    i.fa.fa-bell-o.fa-fw
-                    |  LMKWD Notifications
-                .panel-body
-                  .table-responsive
-                    table.table.table-bordered.table-hover.table-striped
-                      thead
-                        tr
-                          th Username
-                          th lmkwd
-                          th Total
-                      tbody
-                      each val in manAccounts
-                        tr
-                          td= val._id
-                          td.dropdown
-                              button#dropdownMenu1.btn.btn-default.dropdown-toggle(type='button', data-toggle='dropdown', aria-haspopup='true', aria-expanded='true')
-                                | Show
-                                span.caret
-                              ul.dropdown-menu(aria-labelledby='dropdownMenu1')
-                                each value in lmkwd
-                                  if value.username == val._id
-                                    li
-                                      a(href='#', data-dad= val._id, data-child= value.sender).js-remove-lmkwd= value.sender
-                          td N/A
               button.btn.btn-danger.js-new-blacklist-button Add Blacklist
               br
               br
@@ -494,6 +472,7 @@ html
         h4#myModalLabel.modal-title Add an Account to Queue
       .modal-body
         .js-new-que-form
+          button.btn.btn-primary.account-switch(style='right: 15px; position: absolute;') Toggle Account
           br
           label Sender
           input.js-new-que-sender.form-control
@@ -501,9 +480,6 @@ html
           br
           label Account
           .js-new-que-account-input
-          br
-          b.js-delete-account(style='color: darkred; font-size: 20px; cursor: pointer;') DELETE ACCOUNT
-          br
 
           h3 Current Que
           hr
@@ -527,6 +503,10 @@ html
           input.js-new-history.form-control
           br
           button.btn.btn-primary.js-new-history-button Add History
+          br
+          br
+          b.js-delete-account(style='color: darkred; font-size: 20px; cursor: pointer;') DELETE ACCOUNT
+          br
 
       .modal-footer
         button.btn.btn-default(type='button', data-dismiss='modal') Close
