--- a/views/index.jade
+++ b/views/index.jade
@@ -186,7 +186,7 @@ html
                     input(id='auto-switch' type="checkbox" name="my-checkbox" data-on-text='ONLINE' data-off-text='OFFLINE' checked data-label-text='Auto')
                   else
                     input(id='auto-switch' type="checkbox" name="my-checkbox" data-on-text='ONLINE' data-off-text='OFFLINE' data-label-text='Auto')
-                .col-lg-3.pull-right
+                // .col-lg-3.pull-right
                   if manualRunning
                     input(id='manual-switch' type="checkbox" name="my-checkbox" data-on-text='ONLINE' data-off-text='OFFLINE' checked data-label-text='Manual')
                   else
