toggle switch is now start/stop

--- a/views/index.jade
+++ b/views/index.jade
@@ -472,7 +472,8 @@ html
         h4#myModalLabel.modal-title Add an Account to Queue
       .modal-body
         .js-new-que-form
-          button.btn.btn-primary.account-switch(style='right: 15px; position: absolute;') Toggle Account
+          .js-account-toggle
+          
           br
           label Sender
           input.js-new-que-sender.form-control
