--- a/views/index.jade
+++ b/views/index.jade
@@ -269,13 +269,15 @@ html
                     i.fa.fa-database.fa-fw
                     |  Current Que
                 .panel-body
+                  .form-group
+                    input.form-control#search-input(type='text' placeholder='Search')
                   .table-responsive(style='overflow-x: auto; height: 600px !important;')
                     table.table.table-bordered.table-hover.table-striped
                       thead
                         tr
                           th Username
                           th #
-                      tbody
+                      tbody.main-que
                       each val in manAccounts
                         tr
                           if val.status
