front end changes

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -128,7 +128,7 @@ $(document).ready(function () {
 		  		<dtitle>Active Accounts</dtitle>
 		  		<hr>
 	        	<div id="load"></div>
-	        	<h2>80%</h2>
+	        	<h2>42</h2>
 			</div>
         </div>
 
@@ -138,7 +138,7 @@ $(document).ready(function () {
 		  		<dtitle>Disabled Accounts</dtitle>
 		  		<hr>
 	        	<div id="space"></div>
-	        	<h2>20%</h2>
+	        	<h2>11</h2>
 			</div>
         </div>
         
@@ -146,7 +146,7 @@ $(document).ready(function () {
 
       <!-- LOCAL TIME BLOCK -->
       		<div class="half-unit">
-	      		<dtitle>Local Time</dtitle>
+	      		<dtitle>Next Trade</dtitle>
 	      		<hr>
 		      		<div class="clockcenter">
 			      		<digiclock>12:45:25</digiclock>
@@ -168,7 +168,7 @@ $(document).ready(function () {
       
 	  <!-- SECOND ROW OF BLOCKS -->     
       <div class="row">
-        <div class="col-sm-3 col-lg-3">
+        <div class="col-sm-6 col-lg-6">
        <!-- MAIL BLOCK -->
       		<div class="dash-unit">
       		<dtitle>ALL ACCOUNTS</dtitle>
@@ -182,6 +182,8 @@ $(document).ready(function () {
 			                <p class="sender">DiyNaiIs</p>
 			                <p class="message"><strong>Active</strong></p>
 			                <div class="actions">
+			                    <a><img src="http://png-1.findicons.com/files//icons/2232/wireframe_mono/16/undo.png" alt="reply"></a>
+			                    <a><img src="http://png-1.findicons.com/files//icons/2232/wireframe_mono/16/undo.png" alt="reply"></a>
 			                    <a><img src="http://png-1.findicons.com/files//icons/2232/wireframe_mono/16/undo.png" alt="reply"></a>
 			                    
 			                </div>
@@ -226,30 +228,8 @@ $(document).ready(function () {
 
 			</div>
         </div>
-        
-	  <!-- 30 DAYS STATS - CAROUSEL FLEXSLIDER -->     
-        <div class="col-sm-3 col-lg-3">
-      		<div class="dash-unit">
-	      		<dtitle>Inbound | Outbound</dtitle>
-	      		<hr>
-	      		<br>
-	      		<br>
-	            <div class="flexslider">
-					<ul class="slides">
-						<li><img src="img/slide01.png" alt="slider"></li>
-						<li><img src="img/slide02.png" alt="slider"></li>
-					</ul>
-            </div>
-				<div class="cont">
-					<p style='color: red;'>*Inbound</p>
-					<p style='color: green;'>*Outbound</p>
-				</div>   
-			</div>
-        </div>
-      </div><!-- /row -->
-     
  
-	  
+
       
       
 	</div> <!-- /container -->
@@ -258,8 +238,8 @@ $(document).ready(function () {
       	<div class="container">
       		<div class="row">
       			<div class="col-sm-12 col-lg-12">
-      			<p><img src="img/logo.png" alt=""></p>
-      			<p>Blocks Dashboard Theme - Crafted With Love - Copyright 2013</p>
+      			<p><img src="images/logo1.png" alt="" width='7%'></p>
+      			<p>Phenomenal LLC - Copyright 2016</p>
       			</div>
 
       		</div><!-- /row -->
