--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -7,6 +7,7 @@
     <meta name="author" content="Carlos Alvarez - Alvarez.is">
 
     <!-- Le styles -->
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/font-style.css" rel="stylesheet">
@@ -114,7 +115,8 @@ $(document).ready(function () {
 				</div> --> <!-- /thumbnail -->
 				<div class='user-profile'>
 				<br><br>
-					<h1 style='font-size: 30px;'>Julian Guterman</h1>
+					<h2 style='font-size: 30px;'><%= user.username %></h2>
+          <br>
 					<h3 style=''>Boynton Beach, Florida</h3>
 				
 				</div>
@@ -128,7 +130,7 @@ $(document).ready(function () {
 		  		<dtitle>Active Accounts</dtitle>
 		  		<hr>
 	        	<div id="load"></div>
-	        	<h2>42</h2>
+	        	<h2><%= ActiveAccountCount.count %></h2>
 			</div>
         </div>
 
@@ -138,7 +140,7 @@ $(document).ready(function () {
 		  		<dtitle>Disabled Accounts</dtitle>
 		  		<hr>
 	        	<div id="space"></div>
-	        	<h2>11</h2>
+	        	<h2><%= DisabledAccountCount.count %></h2>
 			</div>
         </div>
         
@@ -146,10 +148,10 @@ $(document).ready(function () {
 
       <!-- LOCAL TIME BLOCK -->
       		<div class="half-unit">
-	      		<dtitle>Next Trade</dtitle>
+	      		<dtitle>Last Trade</dtitle>
 	      		<hr>
 		      		<div class="clockcenter">
-			      		<digiclock>12:45:25</digiclock>
+			      		<b style='font-size: 30px;'><%= lastTrade %></b>
 		      		</div>
 			</div>
 
@@ -174,20 +176,28 @@ $(document).ready(function () {
       		<dtitle>ALL ACCOUNTS</dtitle>
       		<hr>
       		<div class="framemail" style='margin-top: -15px;'>
-    			<input type="text" id="contactname" name="contactname" placeholder="Search">
+    			<input type="text" id="search-input" name="contactname" placeholder="Search">
     			<div class="window">
 			        <ul class="mail">
-			            <li>
+                  <% manAccounts.forEach(function(account) { %>
+			            <li data-toggle="modal" href='#myModal' data-id='<%= account.id %>' data-username='<%= account.username %>' class='js-account'>
+                      <% if (account.status) { %>
 			                <i class="unread"></i>
-			                <p class="sender">DiyNaiIs</p>
+                      <% } else { %>
+                      <i class="unread" style="background-color: darkred;"></i>
+                      <% } %>
+
+
+			                <p class="sender"><%= account.username %></p>
+                      <% if (account.active) { %>
 			                <p class="message"><strong>Active</strong></p>
-			                <div class="actions">
-			                    <a><img src="http://png-1.findicons.com/files//icons/2232/wireframe_mono/16/undo.png" alt="reply"></a>
-			                    <a><img src="http://png-1.findicons.com/files//icons/2232/wireframe_mono/16/undo.png" alt="reply"></a>
-			                    <a><img src="http://png-1.findicons.com/files//icons/2232/wireframe_mono/16/undo.png" alt="reply"></a>
-			                    
-			                </div>
+                      <% } else { %>
+                      <p class="message"><strong style='color: darkred;'>Disabled</strong></p>
+                      <% } %>
+
+			                
 			            </li>
+                  <% }); %>
 			            
 			        </ul>
     			</div>
@@ -200,37 +210,17 @@ $(document).ready(function () {
       		<div class="dash-unit">
       		<dtitle>Total Trades</dtitle>
       		<hr>
-			    <div class="section-graph">
+			    <!-- <div class="section-graph">
 			      <div id="importantchart"></div>
 			      <br>
 			      <div class="graph-info">
-			        <i class="graph-arrow"></i>
-			        <span class="graph-info-big">126.00</span>
-			        <span class="graph-info-small">+2.00 (7.4%)</span>
+			        <i class="graph-arrow"></i> -->
+			        <h2 style='font-size: 55px; margin-top: 30%;' class="graph-info-big"><%= totalTrades %></h2>
 			      </div>
 			    </div>
 			</div>
         </div>
 
-	  <!-- LAST MONTH REVENUE -->     
-        <div class="col-sm-3 col-lg-3">
-      		<div class="dash-unit">
-	      		<dtitle>Estimated Daily Revenue</dtitle>
-	      		<hr>
-	      		<div class="cont">
-					<p><bold>$879</bold> | <ok>Approved</ok></p>
-					<br>
-					<p><bold>$377</bold> | <ok style='color: orange'>Pending</ok></p>
-					<br>
-					<p><img src="img/up-small.png" alt=""> 12% Compared Last Month</p>
-
-				</div>
-
-			</div>
-        </div>
- 
-
-      
       
 	</div> <!-- /container -->
 	<div id="footerwrap">
@@ -246,6 +236,56 @@ $(document).ready(function () {
       	</div><!-- /container -->		
 	</div><!-- /footerwrap -->
 
+  
+
+  <!-- MODAL BLOCK -->     
+      <!-- Modal -->
+        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Modal title</h4>
+              </div>
+              <div class="modal-body" style='background-color: #1f1f1f'>
+
+                <p>Current Que</p>
+                <hr style='border-color: grey;'>
+                <div class='js-current-que'>
+                        
+                </div>
+
+                <br>
+                <p>Current Lmkwd</p>
+                <hr style='border-color: grey;'>
+                <div class='js-current-lmkwd'>
+                  
+                </div>
+
+                <br>
+                <p>Current History</p>
+                <hr style='border-color: grey;'>
+                <div class='js-current-history'>
+                  
+                </div>
+
+                <br>
+                <p>Current Sent</p>
+                <hr style='border-color: grey;'>
+                <div class='js-current-sent'>
+                  
+                </div>
+
+                <hr>
+                <div class='delete-account'>
+
+                </div>
+
+              </div>
+            </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+        </div><!-- /.modal -->
+
 
     <!-- Le javascript
     ================================================== -->
@@ -253,7 +293,99 @@ $(document).ready(function () {
     <script type="text/javascript" src="js/bootstrap.js"></script>
 	<script type="text/javascript" src="js/lineandbars.js"></script>
     
-	<script type="text/javascript" src="js/dash-charts.js"></script>
+	<script type="text/javascript">
+   
+    /*** First Chart in Dashboard page ***/
+
+  $(document).ready(function() {
+    info = new Highcharts.Chart({
+      chart: {
+        renderTo: 'load',
+        margin: [0, 0, 0, 0],
+        backgroundColor: null,
+                plotBackgroundColor: 'none',
+              
+      },
+      
+      title: {
+        text: null
+      },
+
+      tooltip: {
+        formatter: function() { 
+          return this.point.name +': '+ this.y +' %';
+            
+        }   
+      },
+        series: [
+        {
+        borderWidth: 2,
+        borderColor: '#F1F3EB',
+        shadow: false,  
+        type: 'pie',
+        name: 'Income',
+        innerSize: '65%',
+        data: [
+          { name: 'Active', y: <%= ActiveAccountCount.count %>, color: '#b2c831' },
+          { name: 'Disabled', y: <%= DisabledAccountCount.count %>, color: '#3d3d3d' }
+        ],
+        dataLabels: {
+          enabled: false,
+          color: '#000000',
+          connectorColor: '#000000'
+        }
+      }]
+    });
+    
+  });
+
+/*** second Chart in Dashboard page ***/
+
+  $(document).ready(function() {
+    info = new Highcharts.Chart({
+      chart: {
+        renderTo: 'space',
+        margin: [0, 0, 0, 0],
+        backgroundColor: null,
+                plotBackgroundColor: 'none',
+              
+      },
+      
+      title: {
+        text: null
+      },
+
+      tooltip: {
+        formatter: function() { 
+          return this.point.name +': '+ this.y +' %';
+            
+        }   
+      },
+        series: [
+        {
+        borderWidth: 2,
+        borderColor: '#F1F3EB',
+        shadow: false,  
+        type: 'pie',
+        name: 'SiteInfo',
+        innerSize: '65%',
+        data: [
+          { name: 'Disabled', y: <%= DisabledAccountCount.count %>, color: '#fa1d2d' },
+          { name: 'Rest', y: <%= ActiveAccountCount.count %>, color: '#3d3d3d' }
+        ],
+        dataLabels: {
+          enabled: false,
+          color: '#000000',
+          connectorColor: '#000000'
+        }
+      }]
+    });
+    
+  });
+
+
+
+  </script>
 	<script type="text/javascript" src="js/gauge.js"></script>
 	
 	<!-- NOTY JAVASCRIPT -->
@@ -262,6 +394,7 @@ $(document).ready(function () {
 	<script type="text/javascript" src="js/noty/layouts/topLeft.js"></script>
 	<script type="text/javascript" src="js/noty/layouts/topRight.js"></script>
 	<script type="text/javascript" src="js/noty/layouts/topCenter.js"></script>
+  <script type="text/javascript" src="javascripts/manual-add-que.js"></script>
 	
 	<!-- You can add more layouts if you want -->
 	<script type="text/javascript" src="js/noty/themes/default.js"></script>
@@ -269,6 +402,9 @@ $(document).ready(function () {
 	<script type="text/javascript" src="http://code.highcharts.com/highcharts.js"></script>
 	<script src="js/jquery.flexslider.js" type="text/javascript"></script>
 
-    <script type="text/javascript" src="js/admin.js"></script>
+  <script type="text/javascript" src="js/admin.js"></script>
+
+
+
   
 </body></html>
