--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -84,7 +84,7 @@ $(document).ready(function () {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html" ><img src="images/logo1.png" alt="" width='6%'> PHENOMENAL</a>
+          <a class="navbar-brand" href="index.html" ><img src="images/narwhal.png" alt="" width='6%'> PHENOMENAL</a>
         </div> 
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -228,7 +228,7 @@ $(document).ready(function () {
       	<div class="container">
       		<div class="row">
       			<div class="col-sm-12 col-lg-12">
-      			<p><img src="images/logo1.png" alt="" width='7%'></p>
+      			<p><img src="images/narwhal.png" alt="" width='7%'></p>
       			<p>Phenomenal LLC - Copyright 2016</p>
       			</div>
 
