--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -219,13 +219,17 @@ $(document).ready(function () {
             <div class="dash-unit">
               <dtitle>Tools</dtitle>
               <hr>
-                <button class='btn btn-default js-send-rts' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Send Retweets</button>
-                <br><br>
-                <button class='btn btn-default js-send-lmkwd' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Send Lmkwd</button>
-                <br><br>
-                <button class='btn btn-danger js-disable-all' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Disable All Accounts</button>
-                <br><br>
-                <button class='btn btn-success js-enable-all' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Enable All Accounts</button>
+              <div class='main-tools'>
+                  <button class='btn btn-default js-send-rts' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Send Retweets</button>
+                  <br><br>
+                  <button class='btn btn-default js-send-lmkwd' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Send Lmkwd</button>
+                  <br><br>
+                  <button class='btn btn-danger js-disable-all' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Disable All Accounts</button>
+                  <br><br>
+                  <button class='btn btn-success js-enable-all' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Enable All Accounts</button>
+                  <br><br>
+                  <button class='btn btn-success js-add-account' style='border-radius: 1px; width: 90%; margin-left: 12px;'> Add Account</button>
+                </div>
             </div>
           </div>
 			</div>
