update account bug fixes

--- a/views/create-account.ejs
+++ b/views/create-account.ejs
@@ -36,7 +36,7 @@
             <input disabled="disabled" class="js-access-secret form-control" value=<%= latestAccessSecret  %>/>
           </div>
         </div>
-        <div class="modal-footer"><a type="button" href="/dashboard" class="btn btn-danger">Back</a><a type="button" href="/dashboard" class="btn btn-primary js-create-account">Create</a></div>
+        <div class="modal-footer"><a type="button" href="/" class="btn btn-danger">Back</a><a type="button" href="/" class="btn btn-primary js-create-account">Create</a></div>
       </div>
     </div>
   </body>
