create accout bug

--- a/views/create-account.ejs
+++ b/views/create-account.ejs
@@ -31,9 +31,9 @@
             <label>Username</label>
             <input class="js-username form-control"/><br/>
             <label>Access Token</label>
-            <input disabled="disabled" class="js-access-token form-control" value=<%= latestAccessToken %>/><br/>
+            <input disabled="disabled" class="js-access-token form-control" value=<%= latestAccessToken %>><br/>
             <label>Access Secret</label>
-            <input disabled="disabled" class="js-access-secret form-control" value=<%= latestAccessSecret  %>/>
+            <input disabled="disabled" class="js-access-secret form-control" value=<%= latestAccessSecret  %>>
           </div>
         </div>
         <div class="modal-footer"><a type="button" href="/" class="btn btn-danger">Back</a><a type="button" href="/" class="btn btn-primary js-create-account">Create</a></div>
