Front end color change

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -263,28 +263,28 @@ $(document).ready(function () {
               </div>
               <div class="modal-body" style='background-color: #1f1f1f'>
 
-                <p>Current Que</p>
+                <p style='color: lightgray;'>Current Que</p>
                 <hr style='border-color: grey;'>
                 <div class='js-current-que'>
                         
                 </div>
 
                 <br>
-                <p>Current Lmkwd</p>
+                <p style='color: lightgray;'>Current Lmkwd</p>
                 <hr style='border-color: grey;'>
                 <div class='js-current-lmkwd'>
                   
                 </div>
 
                 <br>
-                <p>Current History</p>
+                <p style='color: lightgray;'>Current History</p>
                 <hr style='border-color: grey;'>
                 <div class='js-current-history'>
                   
                 </div>
 
                 <br>
-                <p>Current Sent</p>
+                <p style='color: lightgray;'>Current Sent</p>
                 <hr style='border-color: grey;'>
                 <div class='js-current-sent'>
                   
